--- a/test/fixtures/answers.yml
+++ b/test/fixtures/answers.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: answers
+#
+#  id          :bigint(8)        not null, primary key
+#  body        :text
+#  question_id :bigint(8)
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#  user_id     :bigint(8)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
